--- a/src/presentation/afchat/pubspec.yaml
+++ b/src/presentation/afchat/pubspec.yaml
@@ -45,9 +45,10 @@ dependencies:
   flutter_spinkit: ^5.2.0
   timeago: ^3.6.0
   flutter_keyboard_visibility: ^5.4.1
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+#  bloc: ^8.1.2
+#  flutter_bloc: ^8.1.3
   firebase_analytics: ^10.6.4
+  flutterfire_cli: ^0.1.1+2
 
 dev_dependencies:
   flutter_test:
